cmake_minimum_required(VERSION 3.22)
project(pgd_files_rp_heap)

set(CMAKE_CXX_STANDARD 20)

add_executable(pgd_files_rp_heap shortest_paths_mod.cpp)
add_executable(rp_heap_graph1 shortest_paths_mod.cpp)
add_executable(rp_heap_graph2 shortest_paths_mod.cpp)
add_executable(rp_heap_graph3 shortest_paths_mod.cpp)